--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
     #country-select { display: none; }
     /* SEARCH BAR */
     .bento-search-widget {
-      padding: 0 0 20px 0;
+      padding: 0 0 15px 0;
       border-bottom: 1px solid #e6e6e6;
       background: #fff;
       position: relative;
@@ -73,7 +73,7 @@
       gap: 30px;
       width: 100%;
       max-width: 98vw;
-      margin: 0 auto 0 0;
+      margin: 8px auto 0 0;
       background: none;
       padding: 0; 
     }
